<resources>
    <string name="app_name">FITMATE</string>
    <string name="default_notification_channel_id">알림 채널</string>
    <string name="license_scr_toolbar">FITMATE Open Source</string>
    <string name="license_scr_title">|\tOSS Notice\t|\tFITMATE for Android\t|</string>
    <string name="license_scr_openSourceScript">
        This Application is Copyright @ 2024 FITMATE. All Rights Reserved\n\n
        This Application use Open Source Software.\n
        You can find the source code of these open source projects,\n\n
        along with applicable license information, below.\n
        We are deeply grateful to these developers for their work and contributions\n
        Any questions about our use of licensed work can be sent to kimsunfang@gmail.com
    </string>
    <string name="license_scr_item_title">Open Source License Title in here</string>
    <string name="license_scr_item_link">Platform link in here</string>
    <string name="license_scr_item_copyright">License in here</string>
    <string name="license_scr_item_license">License version in here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_first_scr_title">환영합니다! 실시간 피트그룹 탐색</string>
    <string name="onboarding_second_scr_title">원하는 피트그룹을 검색하고 가입하세요</string>
    <string name="onboarding_third_scr_title">나의 피트그룹 일정을 확인하세요.</string>
    <string name="onboarding_fourth_scr_title">피트그룹 멤버와 소통하세요.</string>
    <string name="onboarding_fifth_scr_title">지금 바로 피트메이트와 함께 \n 운동을 시작해보세요.</string>
    <string name="onboarding_first_scr_content">"""피트메이트 홈에서는 다양한 운동
피트그룹을 실시간으로 확인하고,
당신이 가입한 피트그룹의 활동을 한눈에 볼 수 있습니다."""</string>
    <string name="onboarding_second_scr_content">"""여러분의 관심사와 목표에 맞는 피트그룹을 찾아보세요.
카테고리별로 구분되어 쉽게 검색할 수 있으며,
원하는 그룹을 바로 가입할 수 있습니다."""</string>
    <string name="onboarding_third_scr_content">"""당신이 속한 피트그룹의 활동 일정을 확인할 수 있습니다.
운동 일정을 미리 알고 준비하여
건강한 라이프스타일을 유지하세요."""</string>
    <string name="onboarding_fourth_scr_content">"""피트그룹의 다른 멤버들과 대화를 나누고,
활동에 관한 투표에 참여해보세요. 여러분의 의견이
그룹 활동에 직접적인 영향을 미칠 수 있습니다."""</string>
    <string name="onboarding_fifth_scr_content">"""피트메이트를 통하여 새로운 운동 친구들을 만나고,
건강한 삶을 위한 첫걸음을 내딛어보세요."""</string>
    <string name="onboarding_perm_step_button">권한 허용하기</string>
    <string name="onboarding_last_step_button">시작하기</string>
    <string name="onboarding_next_step_button">다음</string>
    <string name="item_vote_scr_title">[ FITGROUP NAME ]</string>
    <string name="item_vote_scr_context">[***]님이 운동 기록을 시작하였습니다.</string>
    <string name="item_vote_scr_per_comment">찬성률 : </string>
    <string name="item_vote_scr_per">"%d"</string>
    <string name="item_vote_scr_time">"%s"</string>
    <string name="item_category_scr_title">[ FITGROUP NAME ]</string>
    <string name="item_category_scr_comment">안녕하세요. 반갑습니다. 운동 같이 열심히 해보아요!\n안녕하세요. 반갑습니다. 운동 같이 열심히 해보아요!</string>
    <string name="item_category_scr_fit">[**]회 / 1주</string>
    <string name="item_category_scr_people">[**] / [**]명</string>
    <string name="home_main_scr_title_1">HOT FITGROUP</string>
    <string name="home_main_scr_title_2">나의 FITGROUP 소식</string>
    <string name="home_main_scr_mine">내 것만 보기</string>
    <string name="category_title">Category</string>
    <string name="category_all">전체</string>
    <string name="category_scr_1">등산</string>
    <string name="category_scr_2">생활 체육</string>
    <string name="category_scr_3">웨이트</string>
    <string name="category_scr_4">수영</string>
    <string name="category_scr_5">축구</string>
    <string name="category_scr_6">농구</string>
    <string name="category_scr_7">야구</string>
    <string name="category_scr_8">바이킹</string>
    <string name="category_scr_9">클라이밍</string>
    <string name="login_scr_kakao">카카오로 시작하기</string>
    <string name="login_scr_naver">네이버로 시작하기</string>
    <string name="login_scr_button_tour">둘러보기 ></string>
    <string name="group_join_scr_default_name">닥치고 스쾉 </string>
    <string name="group_join_scr_image_num">0 / 0</string>
    <string name="group_join_scr_category">#카테고리</string>
    <string name="group_join_scr_now_people">00</string>
    <string name="group_join_scr_now_people_now">00명</string>
    <string name="group_join_scr_now_people_total">/ 00명</string>
    <string name="group_join_scr_comment">FitGroup 상세 정보</string>
    <string name="group_join_scr_script">선착순 모집</string>
    <string name="group_join_scr_confirm">가입 신청하기</string>
    <string name="group_join_scr_now_people_term">0회/1주</string>
    <string name="group_join_scr_max_people">/%s</string>
    <string name="onboarding_permission_scr_content">피트메이트를 100% 즐기기 위해서\n아래 권한들을 허용해주세요.</string>
    <string name="onboarding_permission_scr_text1">필수적 접근 권한</string>
    <string name="onboarding_permission_scr_camera">카메라</string>
    <string name="onboarding_permission_scr_camera_text">운동을 기록하기 위한 카메라에 접근하기 위해\n카메라 권한이 필요합니다.</string>
    <string name="onboarding_permission_scr_memory">저장공간</string>
    <string name="onboarding_permission_scr_memory_text">운동을 기록하기 위한 갤러리에 접근하기 위해\n저장공간 권한이 필요합니다.</string>
    <string name="onboarding_permission_scr_notification">알림</string>
    <string name="onboarding_permission_scr_notification_text">애플리케이션과 사용자의 커뮤니케이션을 위해\n알림 권한이 필요합니다..</string>
    <string name="onboarding_permission_scr_button_text">FITMATE 시작하기</string>
    <string name="my_fit_scr_fit_off">피트 오프</string>
    <string name="my_fit_scr_fit_record">기록하기</string>
    <string name="my_fit_scr_guide_enter_group">아직 FitGroup에 가입되어있지 않으시군요?!</string>
    <string name="my_fit_scr_guide_enter_group2">가입하러가기</string>
    <string name="my_fit_scr_fit_off_spacebar">\t피트오프</string>
    <string name="my_fit_scr_fit_record_spacebar">\t기록하기</string>
    <string name="my_fit_scr_fit_timer_text">[00:00:00]</string>
    <string name="my_group_scr_toolbar">My FitGroup</string>
    <string name="item_my_group_name">[ FITGROUP NAME ]</string>
    <string name="item_my_group_message">[ recent messages.. ]</string>
    <string name="item_my_group_date">[ ** : ** ]</string>
    <string name="make_group_scr_toolbar">FitGroup 만들기</string>
    <string name="make_group_scr_group_name">그룹 이름</string>
    <string name="make_group_scr_group_name_insert">그룹 이름을 입력하세요.</string>
    <string name="make_group_scr_account">벌금을 받을 계좌 정보</string>
    <string name="make_group_scr_account_insert">계좌번호를 입력하세요.</string>
    <string name="make_group_scr_select_bank">은행 선택</string>
    <string name="make_group_scr_category">카테고리 *</string>
    <string name="make_group_scr_category_hint">선택해주세요</string>
    <string name="make_group_scr_category_default">카테고리</string>
    <string name="make_group_scr_fit_num">이행 빈도: 총 %d번</string>
    <string name="make_group_scr_people">최대 인원 수: 총 %d명</string>
    <string name="make_group_scr_comment">그룹 코멘트 *</string>
    <string name="make_group_scr_comment_insert">내용을 입력하세요.</string>
    <string name="make_group_scr_background">그룹 배경화면 *</string>
    <string name="make_group_scr_confirm">FITGROUP 만들기</string>
    <string name="menu_home">Home</string>
    <string name="menu_myfit">MyFit</string>
    <string name="menu_category">Category</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_my_page">My Page</string>
    <string name="chatting_scr_fit_mate_progress">운동 현황</string>
    <string name="chatting_scr_fit_mate_vote">투표</string>
    <string name="chatting_scr_fit_group_point">그룹포인트 현황</string>
    <string name="chatting_scr_fit_certification">기록하러 가기</string>
    <string name="chatting_scr_transfer">즉시 송금</string>
    <string name="chatting_scr_fit_mate_fit_off">피트오프현황</string>
    <string name="chatting_scr_fit_mate_fit_off_apply">피트오프신청</string>
    <string name="chatting_scr_fit_mate_certification">기록하기</string>
    <string name="chatting_scr_fit_group_info">그룹 정보 및 수정</string>
    <string name="chatting_scr_quit_group">그룹 탈퇴하기</string>
    <string name="item_chatting_scr_export">해당 회원을 추방하시겠습니까?</string>
    <string name="item_chatting_scr_out">해당 그룹을 탈퇴하시겠습니까?</string>
    <string name="my_fit_scr_group_progress_toolbar">Fitmate 운동 현황</string>
    <string name="my_fit_scr_group_progress_text">/%d</string>
    <string name="group_fine_scr_toolbar">FitGroup 벌금 내역 일람</string>
    <string name="group_fine_scr_fine">[**,***]</string>
    <string name="group_fine_scr_account">[**] [***-******-***]</string>
    <string name="certificate_scr_toolbar">운동 기록</string>
    <string name="certificate_scr_timer">00 : 00 : 00</string>
    <string name="certificate_scr_confirm">\t\t FIT 기록 시작하기 \t\t</string>
    <string name="certificate_scr_confirm_unactive">시작 사진을 첨부하세요</string>
    <string name="certificate_scr_image_add_warning">사진은 최대 5장까지 첨부할 수 있습니다!</string>
    <string name="certificate_scr_end_image_check_warning">종료 사진을 하나 이상 첨부해주세요!</string>
    <string name="certificate_scr_confirm_finish">인증 완료하기</string>
    <string name="certificate_scr_dialog_title">알림 권한이 없습니다!</string>
    <string name="certificate_scr_dialog_message">알림 권한을 허용하지 않으면 인증 과정에서 운동 시간과 알림을 확인할 수 없습니다!</string>
    <string name="certificate_scr_dialog_positive_button">권한 허용하러가기</string>
    <string name="certificate_scr_dialog_negative_button">알림 없이 진행하기</string>
    <string name="my_fit_off_scr_toolbar">나의 피트오프 열람</string>
    <string name="my_fit_off_scr_empty_text">피트 오프 데이터가 존재하지 않습니다</string>
    <string name="make_fit_off_scr_toolbar">피트오프 신청</string>
    <string name="make_fit_off_scr_group_name">[ GROUP NAME ]</string>
    <string name="make_fit_off_scr_reason_title">Fit off 사유 *</string>
    <string name="make_fit_off_scr_reason">Fit off 사유를 입력해주세요</string>
    <string name="make_fit_off_scr_select_date_title">Fit off 기간 선택 *</string>
    <string name="make_fit_off_scr_select_date">Fit off 기간을 선택해주세요</string>
    <string name="make_fit_off_scr_date">날짜</string>
    <string name="make_fit_off_scr_duration">피트오프 기간</string>
    <string name="make_fit_off_scr_submit">진단서 제출</string>
    <string name="make_fit_off_scr_confirm">피트오프 신청</string>
    <string name="group_fit_off_scr_toolbar">FitGroup 피트오프 열람</string>
    <string name="item_fit_off_scr_name">이름</string>
    <string name="item_fit_off_scr_date">기간</string>
    <string name="item_fit_off_scr_reason">사유 : %s</string>
    <string name="permission_dialog_scr_guide">정말 거부하시겠습니까?</string>
    <string name="permission_dialog_scr_guide_message">저장소 권한을 허용하지 않으면 사진 첨부를 할 수 없습니다!</string>
    <string name="permission_dialog_scr_guide_select">권한 허용하러가기</string>
    <string name="permission_dialog_scr_guide_cancel">취소</string>
    <string name="permission_dialog_scr_guide_setting">저장소 권한을 항상 모두 허용해야만 갤러리에 접근할 수 있습니다!</string>
    <string name="permission_dialog_scr_guide_setting_select">권한 설정하러 가기</string>
    <string name="permission_dialog_scr_guide_setting_cancel">취소</string>
    <string name="fit_title">My Fit</string>
    <string name="fit_cycle_info">%d주/%d회</string>
    <string name="fit_group_count_info">%d/%d</string>
    <string name="my_fit_main_empty_group_guide_text">아직 FitGroup 가입이 되어있지 않으시네요.\n 더 많은 그룹에 가입해보세요!</string>
    <string name="my_fit_title">내 운동기록</string>
    <string name="my_fit_calendar_year_info">%d년</string>
    <string name="my_fit_history_total_num">%d건</string>
    <string name="my_fit_history_date_guide_num">%d월 기록 총</string>
    <string name="my_fit_history_date_day_guide_num">%d월 %d일 기록 총</string>
    <string name="my_fit_history_target_group_guide">%s 외 %d그룹</string>
    <string name="vote_item_nickname">%s님이 인증을 수행하셨습니다</string>
    <string name="dialog_vote_item_nickname">%s님의 운동기록에 투표하세요!</string>
    <string name="vote_item_end_time">%s 뒤에 종료</string>
    <string name="vote_agree_percent">%d%%</string>
    <string name="group_vote_scr_toolbar">투표</string>
    <string name="point_title">포인트 내역 열람</string>
    <string name="group_point_title">그룹 포인트 내역 열람</string>
    <string name="point_text_field_date">전체</string>
    <string name="point_text_field_deal">전체</string>
    <string name="point_amount">%dP</string>
</resources>