<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_chat_graph"
    app:startDestination="@id/chattingFragment">

    <fragment
        android:id="@+id/chattingFragment"
        android:name="com.fitmate.fitmate.presentation.ui.chatting.ChattingFragment"
        android:label="ChattingFragment" >
        <action
            android:id="@+id/action_chattingFragment_to_groupFineFragment"
            app:destination="@id/groupFineFragment" />
        <action
            android:id="@+id/action_chattingFragment_to_groupFitOffFragment"
            app:destination="@id/groupFitOffFragment" />
        <action
            android:id="@+id/action_chattingFragment_to_groupVoteFragment"
            app:destination="@id/groupVoteFragment" />
        <action
            android:id="@+id/action_chattingFragment_to_groupProgressFragment"
            app:destination="@id/groupProgressFragment" />
        <action
            android:id="@+id/action_chattingFragment_to_certificateFragment2"
            app:destination="@id/certificateFragment2" />
    </fragment>
    <fragment
        android:id="@+id/groupFineFragment"
        android:name="com.fitmate.fitmate.presentation.ui.chatting.GroupFineFragment"
        android:label="@string/group_fine_scr_toolbar" />
    <fragment
        android:id="@+id/groupFitOffFragment"
        android:name="com.fitmate.fitmate.presentation.ui.chatting.GroupFitOffFragment"
        android:label="@string/group_fit_off_scr_toolbar" />
    <fragment
        android:id="@+id/groupProgressFragment"
        android:name="com.fitmate.fitmate.presentation.ui.chatting.GroupProgressFragment"
        android:label="@string/progress_scr_toolbar" />
    <fragment
        android:id="@+id/makeFitOffFragment"
        android:name="com.fitmate.fitmate.presentation.ui.chatting.MakeFitOffFragment"
        android:label="@string/make_fit_off_scr_toolbar" />
    <fragment
        android:id="@+id/groupVoteFragment"
        android:name="com.fitmate.fitmate.presentation.ui.chatting.GroupVoteFragment"
        android:label="@string/group_vote_scr_toolbar" />
    <fragment
        android:id="@+id/certificateFragment2"
        android:name="com.fitmate.fitmate.presentation.ui.myfit.CertificateFragment"
        android:label="@string/certificate_scr_toolbar" />
    <fragment
        android:id="@+id/myGroupFragment2"
        android:name="com.fitmate.fitmate.presentation.ui.mygroup.MyGroupFragment"
        android:label="MyGroupFragment" />

</navigation>