<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewPermission"
        android:textAppearance="@style/Font.bold20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/violet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_permission_scr_text1"/>

    <ImageView
        android:id="@+id/imageViewMemory"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_circle"
        android:contentDescription="@null"
        android:padding="9dp"
        android:src="@drawable/ic_baseline_storage_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPermission"
        app:tint="@color/violet" />

    <TextView
        android:id="@+id/textViewMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_permission_scr_memory"
        app:layout_constraintStart_toEndOf="@+id/imageViewMemory"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toTopOf="@+id/imageViewMemory"
        android:textAppearance="@style/Font.bold16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_permission_scr_memory_text"
        android:textAppearance="@style/Font.regular12"
        app:layout_constraintTop_toBottomOf="@+id/textViewMemory"
        tools:layout_editor_absoluteX="65dp" />

    <ImageView
        android:id="@+id/imageViewNotification"
        android:background="@drawable/ic_circle"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMemory"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@null"
        android:padding="9dp"
        android:src="@drawable/ic_baseline_notifications_24"
        app:tint="@color/violet" />

    <TextView
        android:id="@+id/textViewNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_permission_scr_notification"
        app:layout_constraintStart_toEndOf="@+id/imageViewNotification"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toTopOf="@+id/imageViewNotification"
        android:textAppearance="@style/Font.bold16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_permission_scr_notification_text"
        android:textAppearance="@style/Font.regular12"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotification"
        tools:layout_editor_absoluteX="65dp" />

</androidx.constraintlayout.widget.ConstraintLayout>