<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/zircon"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory1"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_1"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_mountain_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory2"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_2"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_normal_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory3"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_3"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_health_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory4"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_4"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_swim_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory5"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_5"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_soccer_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory6"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_6"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_basketball_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory7"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_7"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_baseball_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory8"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_8"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_biking_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCategory9"
                style="@style/Theme.Fitmate.Chip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/category_scr_9"
                android:textAlignment="center"
                android:textColor="@color/turquoise"
                app:chipBackgroundColor="@color/violet"
                app:chipIcon="@drawable/ic_baseline_climbing_24"
                app:chipIconTint="@color/turquoise"
                app:chipMinTouchTargetSize="48dp" />

        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp" />
    </LinearLayout>

</LinearLayout>