<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewItemCategoryFitgroupBackground"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_rounded_rectangle"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/imageViewItemCategoryFitgroupThumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewItemCategoryFitgroupBackground"
        app:layout_constraintStart_toStartOf="@+id/imageViewItemCategoryFitgroupBackground"
        app:layout_constraintTop_toTopOf="@+id/imageViewItemCategoryFitgroupBackground"
        app:srcCompat="@mipmap/ic_launcher_logo"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/textViewItemVoteFitgroupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/item_vote_scr_title"
        android:textAppearance="@style/Font.bold16"
        android:textColor="@color/turquoise"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemCategoryFitgroupThumbnail"
        app:layout_constraintTop_toTopOf="@+id/imageViewItemCategoryFitgroupThumbnail" />

    <TextView
        android:id="@+id/textViewItemVoteFitgroupContext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/item_vote_scr_context"
        android:textAppearance="@style/Font.regular12"
        android:textColor="@color/zircon"
        app:layout_constraintStart_toStartOf="@+id/textViewItemVoteFitgroupTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemVoteFitgroupTitle" />

    <TextView
        android:id="@+id/textViewItemVoteFitgroupPerComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_vote_scr_per_comment"
        android:textAppearance="@style/Font.bold12"
        android:textColor="@color/zircon"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewItemCategoryFitgroupThumbnail"
        app:layout_constraintStart_toStartOf="@+id/textViewItemVoteFitgroupTitle" />

    <TextView
        android:id="@+id/textViewItemVoteFitgroupPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_vote_scr_per"
        android:textAppearance="@style/Font.bold12"
        android:textColor="#F4511E"
        app:layout_constraintBottom_toBottomOf="@+id/textViewItemVoteFitgroupPerComment"
        app:layout_constraintStart_toEndOf="@+id/textViewItemVoteFitgroupPerComment"
        app:layout_constraintTop_toTopOf="@+id/textViewItemVoteFitgroupPerComment" />

    <TextView
        android:id="@+id/textViewItemVoteFitgroupTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/item_vote_scr_time"
        android:textAppearance="@style/Font.bold12"
        android:textColor="@color/zircon"
        app:layout_constraintBottom_toBottomOf="@+id/textViewItemVoteFitgroupPercent"
        app:layout_constraintStart_toEndOf="@+id/textViewItemVoteFitgroupPercent"
        app:layout_constraintTop_toTopOf="@+id/textViewItemVoteFitgroupPercent" />

</androidx.constraintlayout.widget.ConstraintLayout>